artifacthub/library/pod-security-policy/host-network-ports/1.1.6/samples/port_range_block_host_network/example_disallowed_exempted_container_host_network_enabled.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-networking-hn-ok-bad-port
  labels:
    app: nginx-host-networking-ports
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: safeimages.com/nginx
    ports:
    - containerPort: 9001
      hostPort: 9001
