artifacthub/library/pod-security-policy/host-network-ports/1.1.6/samples/port_range_block_host_network/example_disallowed_out_of_range_host_network_true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-networking-ports-disallowed
  labels:
    app: nginx-host-networking-ports
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 9001
      hostPort: 9001
